syntax = "proto3";
import "google/protobuf/empty.proto";
option csharp_namespace = "MachineNodes.Console.Service";

package MachineNodes;


service LightControlService {
  rpc Connect(ConnectionParameters) returns (ConnectionResponse);
  rpc GetLightUpdates(google.protobuf.Empty) returns (stream LightColor);
}

message LightColor {
  int32 red = 1;
  int32 green = 2;
  int32 blue = 3;
}

message ConnectionParameters {
    string clientName = 1;
}

message ConnectionResponse {
 bool accepted = 1;
 string message = 2; 
}
